Correct installation commands